--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "yiisoft/yii2-app-basic",
-    "description": "Yii 2 Basic Project Template",
+    "name": "Adverts",
+    "description": "Adverts",
     "keywords": ["yii2", "framework", "basic", "project template"],
     "homepage": "http://www.yiiframework.com/",
     "type": "project",
-    "license": "BSD-3-Clause",
+    "license": "BSD-3-wClause",
     "support": {
         "issues": "https://github.com/yiisoft/yii2/issues?state=open",
         "forum": "http://www.yiiframework.com/forum/",
@@ -12,7 +12,7 @@
         "irc": "irc://irc.freenode.net/yii",
         "source": "https://github.com/yiisoft/yii2"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.4.0",
         "yiisoft/yii2": "~2.0.5",
@@ -24,7 +24,8 @@
         "nkovacs/yii2-datetimepicker": "*",
         "yiisoft/yii2-authclient": "^2.1",
         "2amigos/yii2-file-upload-widget": "~1.0",
-        "jumper423/yii2-vk": "2.*"
+        "jumper423/yii2-vk": "2.*",
+        "almasaeed2010/adminlte": "~2.4"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
