--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "yiisoft/yii2-authclient": "^2.1",
         "2amigos/yii2-file-upload-widget": "~1.0",
         "jumper423/yii2-vk": "2.*",
-        "almasaeed2010/adminlte": "~2.4"
+        "almasaeed2010/adminlte": "~2.4",
+        "yiisoft/yii2-sphinx": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
