--- a/composer.json
+++ b/composer.json
@@ -12,21 +12,25 @@
         "irc": "irc://irc.freenode.net/yii",
         "source": "https://github.com/yiisoft/yii2"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": ">=5.4.0",
-        "yiisoft/yii2": "~2.0.5",
-        "yiisoft/yii2-bootstrap": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.0.0",
-        "yiisoft/yii2-jui": "~2.0.0",
-        "fishvision/yii2-migrate": "*",
-        "webvimark/module-user-management": "^1.0",
-        "nkovacs/yii2-datetimepicker": "*",
+
+        "yiisoft/yii2": "~2.0.13",
         "yiisoft/yii2-authclient": "^2.1",
+        "yiisoft/yii2-bootstrap": "~2.0.0",
+        "yiisoft/yii2-httpclient": "^2.0",
+        "yiisoft/yii2-jui": "~2.0.0",
+        "yiisoft/yii2-sphinx": "^2.0",
+        "yiisoft/yii2-swiftmailer": "~2.0.0",
+
+        "Eonasdan/bootstrap-datetimepicker": "~4.17.45",
+        "fishvision/yii2-migrate": "*",
         "2amigos/yii2-file-upload-widget": "~1.0",
         "jumper423/yii2-vk": "2.*",
         "almasaeed2010/adminlte": "~2.4",
-        "yiisoft/yii2-sphinx": "^2.0"
+        "google/apiclient": "^2.0",
+        "kartik-v/yii2-widget-datetimepicker": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
@@ -38,7 +42,13 @@
         "codeception/specify": "~0.4.3"
     },
     "config": {
-        "process-timeout": 1800
+        "process-timeout": 1800,
+        "fxp-asset":{
+            "installer-paths": {
+                "npm-asset-library": "vendor/npm",
+                "bower-asset-library": "vendor/bower"
+            }
+        }
     },
     "scripts": {
         "post-create-project-cmd": [
@@ -57,10 +67,6 @@
             "generateCookieValidationKey": [
                 "config/web.php"
             ]
-        },
-        "asset-installer-paths": {
-            "npm-asset-library": "vendor/npm",
-            "bower-asset-library": "vendor/bower"
         }
     }
 }
