--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@
 nbproject
 
 # zend studio for eclipse project files
-.buildpath
+.buildpath.htaccess
+
 .project
 .settings
 
@@ -30,3 +31,4 @@ tests/_output/*
 tests/_support/_generated
 
 web/uploaded/*
+web/assets/*
