--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,10 @@ phpunit.phar
 
 tests/_output/*
 tests/_support/_generated
+
+config/db.php
+config/bootstrap.php
+
+web/assets/*
+web/index.php
+web/index-test.php
