--- a/.gitignore
+++ b/.gitignore
@@ -30,9 +30,9 @@ phpunit.phar
 tests/_output/*
 tests/_support/_generated
 
-config/db.php
-config/bootstrap.php
+/config/db.php
+/config/bootstrap.php
 
-web/assets/*
-web/index.php
-web/index-test.php
+/web/assets/*
+/web/index.php
+/web/index-test.php
